apps/onlyoffice/namespace-onlyoffice.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onlyoffice
  annotations:
    volsync.backube/privileged-movers: "true"
