apps/onlyoffice/deployment-onlyoffice-doc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onlyoffice
  name: onlyoffice-doc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlyoffice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: onlyoffice
    spec:

      containers:
        - image: onlyoffice/documentserver:9.4.0
          imagePullPolicy: IfNotPresent
          name: documentserver
          volumeMounts:
            - name: data
              mountPath: /var/www/onlyoffice/Data
            - name: lib
              mountPath: /var/lib/onlyoffice
            - name: db
              mountPath: /var/lib/postgresql
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: '1'
              memory: 2Gi
            limits:
              cpu: '2'
              memory: 4Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: onlyoffice-data
        - name: lib
          persistentVolumeClaim:
            claimName: onlyoffice-lib
        - name: db
          persistentVolumeClaim:
            claimName: onlyoffice-db
