apps/onlyoffice/service-onlyoffice.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: onlyoffice
  type: ClusterIP
